# ag2-hackathon

./: .gitignore  agent.md
.agents/skills/ag2-hitl/: SKILL.md
.agents/skills/ag2-knowledge-and-memory/: SKILL.md
.agents/skills/ag2-observers-and-alerts/: SKILL.md
.agents/skills/ag2-overview/: SKILL.md
.agents/skills/ag2-structured-output/: SKILL.md
.claude/: settings.local.json
.claude/skills/ag2-add-custom-tool/: SKILL.md
.claude/skills/ag2-ag-ui/: SKILL.md
.claude/skills/ag2-middleware/: SKILL.md
.claude/skills/ag2-multimodal-input/: SKILL.md
.claude/skills/ag2-quickstart/: SKILL.md
.claude/skills/ag2-shell-tool/: SKILL.md
.claude/skills/ag2-subagent-delegation/: SKILL.md
.claude/skills/ag2-telemetry/: SKILL.md
.claude/skills/ag2-testing/: SKILL.md
beta.examples/: README.md
beta.examples/ask-the-web/: .env.example  README.md  backend.py  frontend.html  pyproject.toml
beta.examples/data-analyst/: .env.example  README.md  backend.py  frontend.html  pyproject.toml
beta.examples/mystery-dinner/: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
beta.examples/parallel-research/: .env.example  README.md  main.py  pyproject.toml
life-sandbox/: .env.example  DESIGN.md  README.md  agents.py  backend.py  deploy_to_daytona.py  frontend.html  ingest.py  pyproject.toml  schemas.py
life-sandbox/docs/superpowers/plans/: 2026-05-03-link-inputs.md
life-sandbox/docs/superpowers/specs/: 2026-05-03-link-inputs-design.md
life-sandbox/tests/: test_ingest.py  test_profile_block.py  test_schemas.py
(+31 files in other folders)
