[project]
name = "ask-the-web"
version = "0.1.0"
description = "Citation-backed web Q&A on AG2 Beta with live source cards"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag2[ag-ui,gemini,openai,tavily] @ git+https://github.com/ag2ai/ag2.git@main",
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]
