[project]
name = "data-analyst"
version = "0.1.0"
description = "Data-analysis agent on AG2 Beta with a Daytona sandbox for safe code execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag2[ag-ui,openai,gemini] @ git+https://github.com/ag2ai/ag2.git@main",
    "daytona>=0.100.0",
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.34.0",
]
